fixed the gap between timer and counter on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -213,14 +213,14 @@ button:hover {
   }
 
   .grid-size {
-    width: 60px;
-    height: 60px;
+    width: 68px;
+    height: 68px;
     font-size: 19px;
   }
 
   button {
     width: 120px;
-    font-size: 16px;
+    font-size: 20px;
   }
 
   .popup-box {
@@ -232,5 +232,13 @@ button:hover {
   .win-popup-message {
     padding: 20px 45px;
     white-space: nowrap;
+  }
+
+  .timer {
+    left: 30px;
+  }
+  
+  .flip-count {
+    right: 30px;
   }
 }
